--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Slush 2023</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
